fixed white space in parallax

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,7 +61,7 @@ nav {
 }
 
 .sign-up-desc {
-  font-size: 30px;
+  font-size: 25px;
   color: #0a0045;
 }
 
